# RondaLinux

./: .gitignore  README.md
br-external/: Config.in  README.md  external.desc  external.mk
br-external/board/beaglebone/: extlinux.conf  genimage.cfg
br-external/board/beaglebone/dts/: custom-model.dts  customizado.dtso
br-external/board/beaglebone/overlays/rootfs_overlay/etc/init.d/: S39g_ether
br-external/board/beaglebone/overlays/rootfs_overlay/etc/network/: interfaces
br-external/configs/: bbg_volcan_defconfig
br-external/package/statusdisplay/: CMakeLists.txt  Config.in  statusdisplay.mk
br-external/package/statusdisplay/src/: statusdisplay.c
docs/: hardware_architecture.md
